--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "shimoju.org",
+  "version": "1.0.0",
   "private": true,
   "hexo": {
     "version": ""
