--- a/_config.yml
+++ b/_config.yml
@@ -85,3 +85,8 @@ feed:
   type: atom
   path: atom.xml
   limit: 20
+
+# Markdown
+## Docs: https://github.com/hexojs/hexo-renderer-marked
+marked:
+  smartypants: false
