RSSフィードのパスはfeed.xmlにする

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ deploy:
 ## Docs: https://github.com/hexojs/hexo-generator-feed
 feed:
   type: atom
-  path: atom.xml
+  path: feed.xml
   limit: 20
 
 # Markdown
