--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/tranquilpeak"]
-	path = themes/tranquilpeak
-	url = https://github.com/LouisBarranqueiro/hexo-theme-tranquilpeak.git
+[submodule "themes/apollo"]
+	path = themes/apollo
+	url = https://github.com/shimoju/hexo-theme-apollo.git
