--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: shimoju.diary
 subtitle: テクノロジーと社会
-description:
+description: テクノロジーと社会
 author: Hiroshi Shimoju
 language: ja
 timezone: Asia/Tokyo
